# CorePolicyManager

./: .editorconfig  .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  ai_context.md  build.gradle.kts  gradle.properties  release.b64  release_notes.md  settings.gradle.kts
.github/workflows/: ai-app-review.yml  ai-rust-review.yml  ai-workflow-factory.yml  build-debug.yml  build-release.yml  ci.yml
app/: build.gradle.kts  proguard-rules.pro
core/common/: build.gradle.kts
core/data/: build.gradle.kts
core/database/: build.gradle.kts
core/designsystem/: build.gradle.kts  consumer-rules.pro
core/domain/: build.gradle.kts
core/model/: build.gradle.kts
core/network/: build.gradle.kts
docs/: android-build.md  ci-ai.md  daemon-usage.md  quickstart.md  runtime-notes.md  signing.md
feature/daemon/: build.gradle.kts
feature/home/: build.gradle.kts
feature/overview/: build.gradle.kts
feature/policies/: build.gradle.kts
feature/settings/: build.gradle.kts
gradle/: libs.versions.toml
packaging/magisk/: customize.sh  module.prop  service.sh  uninstall.sh
rust/: Cargo.toml  README.md
rust/crates/lowlevel/: Cargo.toml
rust/crates/lowlevel/src/: lib.rs
rust/crates/lowlevel/src/reactor/: mod.rs
rust/crates/lowlevel/src/sys/: mod.rs
rust/crates/policy/: Cargo.toml
rust/crates/policy/src/: main.rs
rust/docs/: build.md  ipc.md  limitations.md  logging.md  runtime.md
rust/src/: arena.rs  lib.rs  low_level.rs  main.rs  paths.rs  runtime.rs  tests.rs
rust/src/core/: core_state.rs  engine.rs  io.rs  lifecycle.rs  mod.rs  policy.rs  process.rs  reducer.rs  replay.rs  result.rs  scheduler.rs  state_view.rs  types.rs  validation.rs  verify.rs  warmup.rs
rust/src/features/: app_index.rs  mod.rs  preload.rs  profile.rs  tweaks.rs
rust/src/high_level/: addon.rs  android.rs  api.rs  bridge.rs  capability.rs  identity.rs  mod.rs
rust/src/high_level/addons/: mod.rs  preload.rs
rust/src/low_level/: inotify.rs  mod.rs  tests.rs
rust/src/low_level/io/: buffer.rs  drain.rs  mod.rs  writer.rs
rust/src/low_level/reactor/: mod.rs
rust/src/low_level/spawn/: mod.rs
rust/src/low_level/sys/: mod.rs
rust/src/mid_level/: ipc.rs  mod.rs
rust/src/runtime/: control.rs  daemon.rs  effects.rs  foreground.rs  indexer.rs  inotify.rs  logging.rs  mod.rs  pressure.rs  scheduler.rs  signals.rs  status.rs
rust/tests/: cli.rs  coredebug_cli.rs  corepolicy_cli.rs
rust_backup/: README_ARCHIVE.md
rust_backup/.cargo/: config.toml
scripts/: build-magisk-module.sh  build-rust-android.sh
ui/: build.gradle.kts  proguard-rules.pro
(+109 files in other folders)
