[package]
name = "coreshift-policy"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "corepolicy"
path = "src/main.rs"

[[bin]]
name = "coredebug"
path = "src/bin/coredebug.rs"
required-features = ["debug-cli"]

[features]
default = ["std"]
std = ["blake3/std"]
pure = ["blake3/pure"]
debug-cli = ["std"]

[dependencies]
blake3 = { version = "1.8", default-features = false }
arrayvec = "0.7"
bytemuck = { version = "1.2", default-features = false }
lazy_static = { version = "1.5", default-features = false }
libc = { version = "0.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "1.3.3"
smallvec = "1.15.1"
