[package]
name = "coreshift-policy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "corepolicy"
path = "src/main.rs"

[dependencies]
coreshift-lowlevel = { git = "https://github.com/CoreShiftD/coreshift-lowlevel", tag = "v0.1.3-preview.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
