[package]
name = "coreshift-policy"
version = "0.1.0-preview.2"
edition = "2024"

[[bin]]
name = "corepolicy"
path = "src/main.rs"

[dependencies]
coreshift-lowlevel = { git = "https://github.com/CoreShiftD/coreshift-lowlevel", tag = "v0.2.0-preview.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
