[package]
name = "coreshift-policy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "corepolicy"
path = "src/main.rs"

[[bin]]
name = "coredebug"
path = "src/bin/coredebug.rs"
required-features = ["debug-cli"]

[features]
default = ["std"]
std = ["coreshift-lowlevel/std"]
debug-cli = ["std"]

[dependencies]
coreshift-lowlevel = { path = "../lowlevel" }
libc = { version = "0.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
